--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div>
             <button onclick="hub()">
-                <h1>Cliquez ici changer de manuel</h1>
+                <h1>Changer de manuel</h1>
             </button>
         </div>
         <div class="advanced">
