--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
         <div
             style="
                 display: flex;
-                justify-content: space-between;
+                justify-content: center;
                 align-items: center;
+                gap: 10px;
             "
         >
             <button onclick="hub()">
