--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
     <head>
         <title>Manuel</title>
@@ -70,7 +70,6 @@
                     <option value="9">9</option>
                 </select>
             </div>
-	    <elevenlabs-convai agent-id="tE5UcXjaqFhoE5KQpBwW"></elevenlabs-convai><script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
         </div>
 
         <div
@@ -102,6 +101,16 @@
                 }
             }
         </script>
+        <div class="kasprzak" style="display: none">
+            <elevenlabs-convai
+                agent-id="tE5UcXjaqFhoE5KQpBwW"
+            ></elevenlabs-convai>
+            <script
+                src="https://elevenlabs.io/convai-widget/index.js"
+                async
+                type="text/javascript"
+            ></script>
+        </div>
         <div class="advanced">
             <div class="advanced" style="display: none">
                 <label for="nbpage">Entrez la page :</label>
